--- a/website/templates/result.html
+++ b/website/templates/result.html
@@ -2,6 +2,10 @@
 
 {% block content %}
 <main>
+    <h1>Result</h1>
+
+    <hr>
+    
     <form class="result-form">
         <label for="stock market analysis results" class="global-label">Stock Market Price Analysis: </label>
         <input type="text" value="{{ num_result }}" class="global-input" style="margin-left: 59px" readonly> <br> <br>
