--- a/website/templates/main_page.html
+++ b/website/templates/main_page.html
@@ -5,47 +5,46 @@
 {% block content %}
 <!-- Stock info -->
  <main>
-    <div style="margin-bottom: 50px">
+    <div>
+        <h1>Stock Market Analysis</h1>
+    </div>
+
+    <hr>
+    
+    <div style="margin-bottom: 20px; margin-top: 20px;">
         <h2>AAPL Stock Price - By TradingView</h2>
         <!-- TradingView Widget BEGIN -->
-        <div style="display:flex; justify-content:center; height:80vh; width:95%">
+        <div id="tv-chart-wrapper">
             <div class="tradingview-widget-container">
-            <div class="tradingview-widget-container__widget"></div>
-            <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/NASDAQ-AAPL/" rel="noopener nofollow" target="_blank"><span class="blue-text">AAPL stock chart</span></a><span class="trademark"> by TradingView</span></div>
-                <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-advanced-chart.js" async>
-                {
-                    "allow_symbol_change": false,
-                    "calendar": false,
-                    "details": false,
-                    "hide_side_toolbar": true,
-                    "hide_top_toolbar": true,
-                    "hide_legend": false,
-                    "hide_volume": true,
-                    "hotlist": false,
-                    "interval": "D",
-                    "locale": "en",
-                    "save_image": false,
-                    "style": "3",
-                    "symbol": "NASDAQ:AAPL",
-                    "theme": "dark",
-                    "timezone": "Asia/Singapore",
-                    "backgroundColor": "#0F0F0F",
-                    "gridColor": "rgba(242, 242, 242, 0.06)",
-                    "watchlist": [],
-                    "withdateranges": false,
-                    "compareSymbols": [],
-                    "studies": [],
-                    "autosize": true
-                }
-                </script>
+                <div id="tv-chart-container" style="height: 60vh; width: 100%;"></div>
+                <script src="https://s3.tradingview.com/tv.js"></script>
             </div>
+            <div class="stock-list" id="stock-list">
+                <a data-symbol="AAPL" class="stock-link stock-active">AAPL</a>
+                <a data-symbol="MSFT" class="stock-link">MSFT</a>
+                <a data-symbol="BA" class="stock-link">BA</a>
+                <a data-symbol="AMZN" class="stock-link">AMZN</a>
+            </div>
+            
         </div>
         <!-- TradingView Widget END -->
 
-        <p>Info 1</p>
-        <p>Info 2</p>
-        <p>Info 3</p>
+        <div class="stock-info-container">
+            <div>
+                <h1 style="color: {{ display_color }}">{{ '%.2f'|format(latest_closing_price) }}</h1>
+                <p style="color: {{ display_color }}">
+                    {% if closing_price_diff > 0 %} + {% else %} - {% endif %}
+                    {{ closing_price_diff }}
+                </p>
+                <p style="color: {{ display_color }}">{{ diff_percentage }}%</p>
+            </div>
 
+            <div>
+                <p>Apple Inc - NASDAQ</p>
+                <p>Electronic Technology and Telecommunications Equipment</p>
+            </div>
+        </div>
+        
         <button class="global-button" id="download-btn" 
             onclick="location.href = '{{ url_for('download.download_historical') }}'">
         Download Dataset
@@ -60,13 +59,15 @@
         <div id="input-closing-price">
             <!-- Input number, others will auto fill in during conversion -->
             <label for="price-myr" class="global-label">Enter Today's Closing Price (In MYR):</label>
-            <input type="number" id="price-myr" placeholder="RM" step="0.01" class="global-input" name="stockPriceMYR"> <br> <br>
+            <input type="number" id="price-myr" placeholder="RM" step="0.01" class="global-input" 
+            name="stockPriceMYR" value="{{ '%.2f'|format(latest_closing_price * conversion_rate) }}"> <br> <br>
 
             <label for="price-usd" class="global-label">Enter Today's Closing Price (In USD):</label>
-            <input type="number" id="price-usd" placeholder="USD" step="0.01" class="global-input" style="margin-left: 5px" name="stockPriceUSD"> <br> <br>
+            <input type="number" id="price-usd" placeholder="USD" step="0.01" class="global-input" 
+            style="margin-left: 5px" name="stockPriceUSD" value="{{ '%.2f'|format(latest_closing_price) }}"> <br> <br>
 
             <p style="font-size: 120%">Current conversion rate: </p>
-            <p style="font-size: 120%; margin-top: -10px">1 USD: {{ conversion_rate }} MYR</p>
+            <p style="font-size: 120%; margin-top: -10px">1 USD: {{ '%.2f'|format(conversion_rate) }} MYR</p>"
 
             <button class="global-button" type="button" id="retrieve-data"> Retrieve Current Closing Price</button>
 
@@ -189,6 +190,56 @@
             } else {
                 scroll_btn.classList.remove("show");
             }
+        });
+    });
+
+    const stock_link = document.querySelectorAll(".stock-link");
+
+    function loadChart(symbol) {
+        const container = document.getElementById("tv-chart-container");
+        container.innerHTML = "";
+
+        new TradingView.widget({
+            "container_id": "tv-chart-container",
+            "allow_symbol_change": false,
+            "calendar": false,
+            "details": false,
+            "hide_side_toolbar": true,
+            "hide_top_toolbar": true,
+            "hide_legend": false,
+            "hide_volume": true,
+            "hotlist": false,
+            "interval": "D",
+            "locale": "en",
+            "save_image": false,
+            "style": "3",
+            "symbol": symbol,
+            "theme": "dark",
+            "timezone": "Asia/Singapore",
+            "backgroundColor": "#0F0F0F",
+            "gridColor": "rgba(242, 242, 242, 0.06)",
+            "watchlist": [],
+            "withdateranges": false,
+            "compareSymbols": [],
+            "studies": [],
+            "autosize": true
+        });
+    }
+
+    loadChart("NASDAQ:AAPL")
+
+    stock_link.forEach(link => {
+        link.addEventListener("click", e => {
+            e.preventDefault();
+
+            const active_link = document.querySelector(".stock-link.stock-active");
+            active_link.classList.remove("stock-active");
+            link.classList.toggle("stock-active");
+
+            const symbol = link.dataset.symbol;
+            stock_symbol = symbol;
+
+            loadChart(stock_symbol);
         });
     });
 </script>
