--- a/website/templates/result.html
+++ b/website/templates/result.html
@@ -22,7 +22,8 @@
     <div>
         <p>(Note)</p>
 
-        <strong style="color: red">(Disclaimer message)</strong>
+        <strong style="color: red">The results made by the model are only meant for educational purpose, 
+                do not treat it as confirmation for your trading strategy</strong>
     </div>
 
     <br> <br>
