--- a/website/templates/admin_page.html
+++ b/website/templates/admin_page.html
@@ -10,15 +10,27 @@
 <main>
     <h2>Welcome Back, Admin</h2>
 
-    <div class="page-center">
-        <div class="image-admin">
-            <img src="{{ url_for('static', filename='images/placeholder.jpg') }}" class="global-img">
-            <p class="global-img-desc">placeholder image</p>
-
-            <button class="global-button" onclick="location.href = '{{ url_for('download.download_historical') }}'">
-                Download Dataset
-            </button>
+    <div style="margin-bottom: 20px; margin-top: 20px;">
+        <h2>AAPL Stock Price - By TradingView</h2>
+        <!-- TradingView Widget BEGIN -->
+        <div id="tv-chart-wrapper">
+            <div class="tradingview-widget-container">
+                <div id="tv-chart-container" style="height: 60vh; width: 100%;"></div>
+                <script src="https://s3.tradingview.com/tv.js"></script>
+            </div>
+            <div class="stock-list" id="stock-list">
+                <button data-symbol="AAPL" class="stock-link stock-active">AAPL</button>
+                <button data-symbol="MSFT" class="stock-link">MSFT</button>
+                <button data-symbol="BA" class="stock-link">BA</button>
+                <button data-symbol="AMZN" class="stock-link">AMZN</button>
+            </div>
         </div>
+        <!-- TradingView Widget END -->
+        
+        <button class="global-button" id="download-btn" 
+            onclick="location.href = '{{ url_for('download.download_historical') }}'">
+        Download Dataset
+        </button>
     </div>
 
     <div class="button-redirect-admin">
@@ -27,5 +39,56 @@
         <button class="global-button" style="margin-left: 20px;" 
             onclick="location.href = '{{ url_for('admin.nlp_model') }}'">View NLP Model</button>
     </div>
+    <script>    
+        const stock_link = document.querySelectorAll(".stock-link");
+
+        function loadChart(symbol) {
+            const container = document.getElementById("tv-chart-container");
+            container.innerHTML = "";
+
+            new TradingView.widget({
+                "container_id": "tv-chart-container",
+                "allow_symbol_change": false,
+                "calendar": false,
+                "details": false,
+                "hide_side_toolbar": true,
+                "hide_top_toolbar": true,
+                "hide_legend": false,
+                "hide_volume": true,
+                "hotlist": false,
+                "interval": "D",
+                "locale": "en",
+                "save_image": false,
+                "style": "3",
+                "symbol": symbol,
+                "theme": "dark",
+                "timezone": "Asia/Singapore",
+                "backgroundColor": "#0F0F0F",
+                "gridColor": "rgba(242, 242, 242, 0.06)",
+                "watchlist": [],
+                "withdateranges": false,
+                "compareSymbols": [],
+                "studies": [],
+                "autosize": true
+            });
+        }
+
+        loadChart("NASDAQ:AAPL")
+
+        stock_link.forEach(link => {
+            link.addEventListener("click", e => {
+                e.preventDefault();
+
+                const active_link = document.querySelector(".stock-link.stock-active");
+                active_link.classList.remove("stock-active");
+                link.classList.toggle("stock-active");
+
+                const symbol = link.dataset.symbol;
+                stock_symbol = symbol;
+
+                loadChart(stock_symbol);
+            });
+        });
+    </script>
 </main>
 {% endblock %}
